server/src/app/parser/gen/MapGeneratorParser.ts
// Generated from ./src/app/parser/MapGeneratorParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { MapGeneratorParserListener } from "./MapGeneratorParserListener";
import { MapGeneratorParserVisitor } from "./MapGeneratorParserVisitor";


export class MapGeneratorParser extends Parser {
	public static readonly WS = 1;
	public static readonly OPEN_CURLY = 2;
	public static readonly CLOSE_CURLY = 3;
	public static readonly OPEN_PAREN = 4;
	public static readonly CLOSE_PAREN = 5;
	public static readonly COMMA = 6;
	public static readonly CHAIN_OP = 7;
	public static readonly EQ = 8;
	public static readonly COORDINATE = 9;
	public static readonly VARIABLE = 10;
	public static readonly CONSTANT = 11;
	public static readonly FUNCTION = 12;
	public static readonly DEFINITIONS = 13;
	public static readonly TO = 14;
	public static readonly FROM = 15;
	public static readonly AT = 16;
	public static readonly AND = 17;
	public static readonly HIGHWAY = 18;
	public static readonly STREET = 19;
	public static readonly BRIDGE = 20;
	public static readonly TIMES = 21;
	public static readonly CREATE = 22;
	public static readonly SEMICOLON = 23;
	public static readonly STOP = 24;
	public static readonly TRAIN = 25;
	public static readonly TRAFFIC = 26;
	public static readonly BUS = 27;
	public static readonly SIGN = 28;
	public static readonly LIGHT = 29;
	public static readonly WATER = 30;
	public static readonly BUILDING = 31;
	public static readonly OUTPUT = 32;
	public static readonly END_OUTPUT = 33;
	public static readonly END_DEFINITION = 34;
	public static readonly LOOP = 35;
	public static readonly END_LOOP = 36;
	public static readonly IF = 37;
	public static readonly ELSE_IF = 38;
	public static readonly ELSE = 39;
	public static readonly THEN = 40;
	public static readonly END_IF = 41;
	public static readonly CANVAS = 42;
	public static readonly SIZE = 43;
	public static readonly BY = 44;
	public static readonly POSITIVE_NUMBER = 45;
	public static readonly NEGATIVE_NUMBER = 46;
	public static readonly TRUE = 47;
	public static readonly FALSE = 48;
	public static readonly OPERATOR = 49;
	public static readonly BUS_STOP = 50;
	public static readonly STOP_SIGN = 51;
	public static readonly TRAFFIC_LIGHT = 52;
	public static readonly TRAIN_STOP = 53;
	public static readonly CANVAS_SIZE = 54;
	public static readonly NAME = 55;
	public static readonly RULE_program = 0;
	public static readonly RULE_canvasConfiguration = 1;
	public static readonly RULE_definitionBlock = 2;
	public static readonly RULE_globalBodyElement = 3;
	public static readonly RULE_functionDeclaration = 4;
	public static readonly RULE_outputBlock = 5;
	public static readonly RULE_statement = 6;
	public static readonly RULE_loopBlock = 7;
	public static readonly RULE_ifElseBlock = 8;
	public static readonly RULE_branchBody = 9;
	public static readonly RULE_variableAssignment = 10;
	public static readonly RULE_localVariableDeclaration = 11;
	public static readonly RULE_globalVariableDeclaration = 12;
	public static readonly RULE_createCall = 13;
	public static readonly RULE_markerOutput = 14;
	public static readonly RULE_streetOutput = 15;
	public static readonly RULE_polygonOutput = 16;
	public static readonly RULE_expression = 17;
	public static readonly RULE_firstOpExpr = 18;
	public static readonly RULE_opExpr = 19;
	public static readonly RULE_position = 20;
	public static readonly RULE_positionAccess = 21;
	public static readonly RULE_functionCall = 22;
	public static readonly RULE_token = 23;
	public static readonly RULE_functionName = 24;
	public static readonly RULE_parameterName = 25;
	public static readonly RULE_variableName = 26;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "canvasConfiguration", "definitionBlock", "globalBodyElement", 
		"functionDeclaration", "outputBlock", "statement", "loopBlock", "ifElseBlock", 
		"branchBody", "variableAssignment", "localVariableDeclaration", "globalVariableDeclaration", 
		"createCall", "markerOutput", "streetOutput", "polygonOutput", "expression", 
		"firstOpExpr", "opExpr", "position", "positionAccess", "functionCall", 
		"token", "functionName", "parameterName", "variableName",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, "'{'", "'}'", "'('", "')'", "','", "'.'", "'='", 
		undefined, "'VARIABLE'", "'CONSTANT'", "'FUNCTION'", "'DEFINITIONS'", 
		"'to'", "'from'", "'at'", "'and'", "'highway'", "'street'", "'bridge'", 
		"'TIMES'", "'CREATE'", "';'", "'stop'", "'train'", "'traffic'", "'bus'", 
		"'sign'", "'light'", "'water'", "'building'", "'OUTPUT'", "'END_OUTPUT'", 
		"'END_DEFINITIONS'", "'LOOP'", "'END_LOOP'", "'IF'", "'ELSE IF'", "'ELSE'", 
		"'THEN'", "'END_IF'", "'CANVAS'", "'SIZE'", "'by'", undefined, undefined, 
		"'true'", "'false'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "WS", "OPEN_CURLY", "CLOSE_CURLY", "OPEN_PAREN", "CLOSE_PAREN", 
		"COMMA", "CHAIN_OP", "EQ", "COORDINATE", "VARIABLE", "CONSTANT", "FUNCTION", 
		"DEFINITIONS", "TO", "FROM", "AT", "AND", "HIGHWAY", "STREET", "BRIDGE", 
		"TIMES", "CREATE", "SEMICOLON", "STOP", "TRAIN", "TRAFFIC", "BUS", "SIGN", 
		"LIGHT", "WATER", "BUILDING", "OUTPUT", "END_OUTPUT", "END_DEFINITION", 
		"LOOP", "END_LOOP", "IF", "ELSE_IF", "ELSE", "THEN", "END_IF", "CANVAS", 
		"SIZE", "BY", "POSITIVE_NUMBER", "NEGATIVE_NUMBER", "TRUE", "FALSE", "OPERATOR", 
		"BUS_STOP", "STOP_SIGN", "TRAFFIC_LIGHT", "TRAIN_STOP", "CANVAS_SIZE", 
		"NAME",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(MapGeneratorParser._LITERAL_NAMES, MapGeneratorParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return MapGeneratorParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "MapGeneratorParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return MapGeneratorParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return MapGeneratorParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(MapGeneratorParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, MapGeneratorParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MapGeneratorParser.CANVAS_SIZE) {
				{
				this.state = 54;
				this.canvasConfiguration();
				}
			}

			this.state = 58;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MapGeneratorParser.DEFINITIONS) {
				{
				this.state = 57;
				this.definitionBlock();
				}
			}

			this.state = 60;
			this.outputBlock();
			this.state = 61;
			this.match(MapGeneratorParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public canvasConfiguration(): CanvasConfigurationContext {
		let _localctx: CanvasConfigurationContext = new CanvasConfigurationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, MapGeneratorParser.RULE_canvasConfiguration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 63;
			this.match(MapGeneratorParser.CANVAS_SIZE);
			this.state = 64;
			this.match(MapGeneratorParser.POSITIVE_NUMBER);
			this.state = 65;
			this.match(MapGeneratorParser.BY);
			this.state = 66;
			this.match(MapGeneratorParser.POSITIVE_NUMBER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public definitionBlock(): DefinitionBlockContext {
		let _localctx: DefinitionBlockContext = new DefinitionBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, MapGeneratorParser.RULE_definitionBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 68;
			this.match(MapGeneratorParser.DEFINITIONS);
			this.state = 70;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 69;
				this.globalBodyElement();
				}
				}
				this.state = 72;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === MapGeneratorParser.CONSTANT || _la === MapGeneratorParser.FUNCTION);
			this.state = 74;
			this.match(MapGeneratorParser.END_DEFINITION);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public globalBodyElement(): GlobalBodyElementContext {
		let _localctx: GlobalBodyElementContext = new GlobalBodyElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, MapGeneratorParser.RULE_globalBodyElement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MapGeneratorParser.FUNCTION:
				{
				this.state = 76;
				this.functionDeclaration();
				}
				break;
			case MapGeneratorParser.CONSTANT:
				{
				this.state = 77;
				this.globalVariableDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let _localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, MapGeneratorParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 80;
			this.match(MapGeneratorParser.FUNCTION);
			this.state = 81;
			this.functionName();
			this.state = 82;
			this.match(MapGeneratorParser.OPEN_PAREN);
			this.state = 83;
			this.parameterName();
			this.state = 88;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MapGeneratorParser.COMMA) {
				{
				{
				this.state = 84;
				this.match(MapGeneratorParser.COMMA);
				this.state = 85;
				this.parameterName();
				}
				}
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 91;
			this.match(MapGeneratorParser.CLOSE_PAREN);
			this.state = 92;
			this.match(MapGeneratorParser.OPEN_CURLY);
			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 93;
				this.statement();
				}
				}
				this.state = 96;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MapGeneratorParser.OPEN_PAREN) | (1 << MapGeneratorParser.VARIABLE) | (1 << MapGeneratorParser.CREATE))) !== 0) || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (MapGeneratorParser.LOOP - 35)) | (1 << (MapGeneratorParser.IF - 35)) | (1 << (MapGeneratorParser.POSITIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.NEGATIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.TRUE - 35)) | (1 << (MapGeneratorParser.FALSE - 35)) | (1 << (MapGeneratorParser.NAME - 35)))) !== 0));
			this.state = 98;
			this.match(MapGeneratorParser.CLOSE_CURLY);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public outputBlock(): OutputBlockContext {
		let _localctx: OutputBlockContext = new OutputBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, MapGeneratorParser.RULE_outputBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 100;
			this.match(MapGeneratorParser.OUTPUT);
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 101;
				this.statement();
				}
				}
				this.state = 104;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MapGeneratorParser.OPEN_PAREN) | (1 << MapGeneratorParser.VARIABLE) | (1 << MapGeneratorParser.CREATE))) !== 0) || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (MapGeneratorParser.LOOP - 35)) | (1 << (MapGeneratorParser.IF - 35)) | (1 << (MapGeneratorParser.POSITIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.NEGATIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.TRUE - 35)) | (1 << (MapGeneratorParser.FALSE - 35)) | (1 << (MapGeneratorParser.NAME - 35)))) !== 0));
			this.state = 106;
			this.match(MapGeneratorParser.END_OUTPUT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, MapGeneratorParser.RULE_statement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 114;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				{
				this.state = 108;
				this.localVariableDeclaration();
				}
				break;

			case 2:
				{
				this.state = 109;
				this.variableAssignment();
				}
				break;

			case 3:
				{
				this.state = 110;
				this.createCall();
				}
				break;

			case 4:
				{
				this.state = 111;
				this.loopBlock();
				}
				break;

			case 5:
				{
				this.state = 112;
				this.ifElseBlock();
				}
				break;

			case 6:
				{
				this.state = 113;
				this.expression();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public loopBlock(): LoopBlockContext {
		let _localctx: LoopBlockContext = new LoopBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, MapGeneratorParser.RULE_loopBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 116;
			this.match(MapGeneratorParser.LOOP);
			this.state = 117;
			this.match(MapGeneratorParser.POSITIVE_NUMBER);
			this.state = 118;
			this.match(MapGeneratorParser.TIMES);
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 119;
				this.statement();
				}
				}
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MapGeneratorParser.OPEN_PAREN) | (1 << MapGeneratorParser.VARIABLE) | (1 << MapGeneratorParser.CREATE))) !== 0) || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (MapGeneratorParser.LOOP - 35)) | (1 << (MapGeneratorParser.IF - 35)) | (1 << (MapGeneratorParser.POSITIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.NEGATIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.TRUE - 35)) | (1 << (MapGeneratorParser.FALSE - 35)) | (1 << (MapGeneratorParser.NAME - 35)))) !== 0));
			this.state = 124;
			this.match(MapGeneratorParser.END_LOOP);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifElseBlock(): IfElseBlockContext {
		let _localctx: IfElseBlockContext = new IfElseBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, MapGeneratorParser.RULE_ifElseBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 126;
			this.match(MapGeneratorParser.IF);
			this.state = 127;
			this.firstOpExpr();
			this.state = 128;
			this.match(MapGeneratorParser.THEN);
			this.state = 129;
			this.branchBody();
			this.state = 137;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === MapGeneratorParser.ELSE_IF) {
				{
				{
				this.state = 130;
				this.match(MapGeneratorParser.ELSE_IF);
				this.state = 131;
				this.firstOpExpr();
				this.state = 132;
				this.match(MapGeneratorParser.THEN);
				this.state = 133;
				this.branchBody();
				}
				}
				this.state = 139;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === MapGeneratorParser.ELSE) {
				{
				this.state = 140;
				this.match(MapGeneratorParser.ELSE);
				this.state = 141;
				this.branchBody();
				}
			}

			this.state = 144;
			this.match(MapGeneratorParser.END_IF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public branchBody(): BranchBodyContext {
		let _localctx: BranchBodyContext = new BranchBodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, MapGeneratorParser.RULE_branchBody);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 147;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 146;
				this.statement();
				}
				}
				this.state = 149;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MapGeneratorParser.OPEN_PAREN) | (1 << MapGeneratorParser.VARIABLE) | (1 << MapGeneratorParser.CREATE))) !== 0) || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & ((1 << (MapGeneratorParser.LOOP - 35)) | (1 << (MapGeneratorParser.IF - 35)) | (1 << (MapGeneratorParser.POSITIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.NEGATIVE_NUMBER - 35)) | (1 << (MapGeneratorParser.TRUE - 35)) | (1 << (MapGeneratorParser.FALSE - 35)) | (1 << (MapGeneratorParser.NAME - 35)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableAssignment(): VariableAssignmentContext {
		let _localctx: VariableAssignmentContext = new VariableAssignmentContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, MapGeneratorParser.RULE_variableAssignment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.variableName();
			this.state = 152;
			this.match(MapGeneratorParser.EQ);
			this.state = 153;
			this.expression();
			this.state = 154;
			this.match(MapGeneratorParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public localVariableDeclaration(): LocalVariableDeclarationContext {
		let _localctx: LocalVariableDeclarationContext = new LocalVariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, MapGeneratorParser.RULE_localVariableDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this.match(MapGeneratorParser.VARIABLE);
			this.state = 157;
			this.variableName();
			this.state = 158;
			this.match(MapGeneratorParser.EQ);
			this.state = 159;
			this.expression();
			this.state = 160;
			this.match(MapGeneratorParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public globalVariableDeclaration(): GlobalVariableDeclarationContext {
		let _localctx: GlobalVariableDeclarationContext = new GlobalVariableDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, MapGeneratorParser.RULE_globalVariableDeclaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.match(MapGeneratorParser.CONSTANT);
			this.state = 163;
			this.variableName();
			this.state = 164;
			this.match(MapGeneratorParser.EQ);
			this.state = 165;
			this.expression();
			this.state = 166;
			this.match(MapGeneratorParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public createCall(): CreateCallContext {
		let _localctx: CreateCallContext = new CreateCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, MapGeneratorParser.RULE_createCall);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(MapGeneratorParser.CREATE);
			this.state = 172;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case MapGeneratorParser.BUS_STOP:
			case MapGeneratorParser.STOP_SIGN:
			case MapGeneratorParser.TRAFFIC_LIGHT:
			case MapGeneratorParser.TRAIN_STOP:
				{
				this.state = 169;
				this.markerOutput();
				}
				break;
			case MapGeneratorParser.HIGHWAY:
			case MapGeneratorParser.STREET:
			case MapGeneratorParser.BRIDGE:
				{
				this.state = 170;
				this.streetOutput();
				}
				break;
			case MapGeneratorParser.WATER:
			case MapGeneratorParser.BUILDING:
				{
				this.state = 171;
				this.polygonOutput();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 174;
			this.match(MapGeneratorParser.SEMICOLON);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public markerOutput(): MarkerOutputContext {
		let _localctx: MarkerOutputContext = new MarkerOutputContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, MapGeneratorParser.RULE_markerOutput);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			_la = this._input.LA(1);
			if (!(((((_la - 50)) & ~0x1F) === 0 && ((1 << (_la - 50)) & ((1 << (MapGeneratorParser.BUS_STOP - 50)) | (1 << (MapGeneratorParser.STOP_SIGN - 50)) | (1 << (MapGeneratorParser.TRAFFIC_LIGHT - 50)) | (1 << (MapGeneratorParser.TRAIN_STOP - 50)))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 177;
			this.match(MapGeneratorParser.AT);
			this.state = 178;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public streetOutput(): StreetOutputContext {
		let _localctx: StreetOutputContext = new StreetOutputContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, MapGeneratorParser.RULE_streetOutput);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << MapGeneratorParser.HIGHWAY) | (1 << MapGeneratorParser.STREET) | (1 << MapGeneratorParser.BRIDGE))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 181;
			this.match(MapGeneratorParser.FROM);
			this.state = 182;
			this.expression();
			this.state = 183;
			this.match(MapGeneratorParser.TO);
			this.state = 184;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public polygonOutput(): PolygonOutputContext {
		let _localctx: PolygonOutputContext = new PolygonOutputContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, MapGeneratorParser.RULE_polygonOutput);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 186;
			_la = this._input.LA(1);
			if (!(_la === MapGeneratorParser.WATER || _la === MapGeneratorParser.BUILDING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 187;
			this.match(MapGeneratorParser.AT);
			this.state = 188;
			this.expression();
			this.state = 189;
			this.expression();
			this.state = 190;
			this.expression();
			this.state = 191;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 34, MapGeneratorParser.RULE_expression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 196;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				{
				this.state = 193;
				this.firstOpExpr();
				}
				break;
